--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="header">
             <div class="logo"> 
-                <img src="img/logo.png" alt="image not fount" width="100px">
+                <img src="/img/logo.png" alt="image not fount" width="100px">
             </div>
             <div class="heading">
                 <h3>Govermernt polytechnic college purapuzha</h3>
